fix: adding text overflow for accordions (#276)

--- a/packages/ds/src/components/accordion/accordion.module.css
+++ b/packages/ds/src/components/accordion/accordion.module.css
@@ -43,6 +43,13 @@
   flex: 0.1;
 }
 
+.accordion > header > div {
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .list {
   display: flex;
   flex-direction: column;
